<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F4F7"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#000000"
            >
            <ImageView
                android:layout_width="40dp"
                android:paddingLeft="10dp"
                android:layout_height="40dp"
                android:src="@drawable/hambs"
                >

            </ImageView>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="MainActivity"
    android:layout_marginTop="10dp"
    android:textSize="20dp"
    android:textColor="@color/white"

    android:textStyle="bold"
    android:textAlignment="center">

</TextView>
        </LinearLayout>



        <GridLayout
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins"
            android:layout_marginTop="17dp"
            android:rowCount="1"
            android:columnCount="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <androidx.cardview.widget.CardView
               android:id="@+id/c1"
               app:cardBackgroundColor="#ffffff"
               app:cardElevation="8dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_columnWeight="1"
               android:layout_rowWeight="1"
               android:layout_marginBottom="10dp"
               android:layout_marginLeft="6dp"
               android:layout_marginRight="3dp"
               app:cardCornerRadius="12dp"
               android:elevation="60dp"

               >
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:layout_margin="15dp"
                   android:orientation="vertical"

                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/attednance"
                       android:textSize="18sp"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textAlignment="center"
                       android:layout_gravity="center_horizontal"/>

                   <ImageView
                       android:layout_width="100dp"
                       android:layout_height="130dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/attendnace">



                   </ImageView>

               </LinearLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/c2"
               app:cardElevation="8dp"

               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_columnWeight="1"
               android:layout_rowWeight="1"
               android:layout_marginBottom="10dp"
               android:layout_marginLeft="6dp"
               android:layout_marginRight="3dp"
               app:cardCornerRadius="12dp"
               android:elevation="60dp"

               >
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:layout_margin="15dp"
                   android:orientation="vertical"

                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/homework"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textSize="18sp"
                       android:textAlignment="center"
                       android:layout_gravity="center_horizontal"/>

                   <ImageView
                       android:layout_width="100dp"
                       android:layout_height="120dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/do_homework">



                   </ImageView>

               </LinearLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/c3"
               android:layout_width="wrap_content"
               app:cardElevation="8dp"

               android:layout_height="wrap_content"
               android:layout_columnWeight="1"
               android:layout_rowWeight="1"
               android:layout_marginBottom="10dp"
               android:layout_marginLeft="6dp"
               android:layout_marginRight="3dp"
               app:cardCornerRadius="12dp"
               android:elevation="60dp"
               >
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:layout_margin="15dp"
                   android:orientation="vertical"

                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/exam"
                       android:textSize="18sp"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textAlignment="center"
                       android:layout_gravity="center_horizontal"/>

                   <ImageView
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/exam">



                   </ImageView>

               </LinearLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/c4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_columnWeight="1"
               android:layout_rowWeight="1"
               android:layout_marginBottom="10dp"
               app:cardElevation="8dp"

               android:layout_marginLeft="6dp"
               android:layout_marginRight="3dp"
               app:cardCornerRadius="12dp"
               android:elevation="60dp"

               >
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:layout_margin="15dp"
                   android:orientation="vertical"

                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/mis"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textSize="18sp"
                       android:textAlignment="center"
                       android:layout_gravity="center_horizontal"/>

                   <ImageView
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/bar_chart">



                   </ImageView>

               </LinearLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/c5"
               app:cardBackgroundColor="#ffffff"
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_columnWeight="1"
               android:layout_rowWeight="1"
               android:layout_marginBottom="10dp"
               android:layout_marginLeft="6dp"
               app:cardElevation="8dp"

               android:layout_marginRight="3dp"
               app:cardCornerRadius="12dp"
               android:elevation="60dp"

               >
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:layout_margin="15dp"
                   android:orientation="vertical"

                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/reports"
                       android:textSize="18sp"
                       android:textAlignment="center"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:layout_gravity="center_horizontal"/>

                   <ImageView
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/reports">



                   </ImageView>

               </LinearLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/c6"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_columnWeight="1"
               android:layout_rowWeight="1"
               app:cardElevation="8dp"

               android:layout_marginBottom="10dp"
               android:layout_marginLeft="6dp"
               android:layout_marginRight="3dp"
               app:cardCornerRadius="12dp"
               android:elevation="60dp"

               >
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:layout_margin="15dp"
                   android:orientation="vertical"

                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/management"
                       android:textSize="18sp"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textAlignment="center"
                       android:layout_gravity="center_horizontal"/>

                   <ImageView
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/progress">



                   </ImageView>

               </LinearLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/c7"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_columnWeight="1"
               android:layout_rowWeight="1"
               android:layout_marginBottom="10dp"
               android:layout_marginLeft="6dp"
               app:cardElevation="8dp"

               android:layout_marginRight="3dp"
               app:cardCornerRadius="12dp"
               android:elevation="60dp"

               >
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:layout_margin="15dp"
                   android:orientation="vertical"

                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Schedule"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textSize="18sp"
                       android:textAlignment="center"
                       android:layout_gravity="center_horizontal"/>

                   <ImageView
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/time">



                   </ImageView>

               </LinearLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/c8"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_columnWeight="1"
               android:layout_rowWeight="1"
               android:layout_marginBottom="10dp"
               android:layout_marginLeft="10dp"
               android:layout_marginRight="3dp"
               app:cardElevation="8dp"

               app:cardCornerRadius="12dp"
               android:elevation="60dp"

               >
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:layout_margin="15dp"
                   android:orientation="vertical"

                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/notification"
                       android:textStyle="bold"
                       android:textColor="@color/black"

                       android:textSize="18sp"
                       android:textAlignment="center"
                       android:layout_gravity="center_horizontal"/>

                   <ImageView
                       android:layout_width="130dp"
                       android:layout_height="130dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/notification">



                   </ImageView>

               </LinearLayout>

           </androidx.cardview.widget.CardView>






       </GridLayout>

</LinearLayout>

</ScrollView>